# stack-file-watch-loop

./: stack-file-watch-loop.cabal
app/: Main.hs
