name:                stack-file-watch-loop
version:             0.1.0.0
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Author Nmae
maintainer:          author@example.com
copyright:           2015 Author Name
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Paths_stack_file_watch_loop
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable stack-file-watch-loop-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stack-file-watch-loop
                     , wreq
                     , network-uri
                     , bloodhound               >= 0.6
                     , string-conversions
                     , optparse-applicative
                     , optparse-simple
                     , filemanip
  default-language:    Haskell2010

test-suite stack-file-watch-loop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stack-file-watch-loop
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@bitbucket.org/briends/stack-file-watch-loop.git
